# ocean-data-dashboard

./: .dockerignore  .gitignore  1. `docker-compose.yml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  docker-compose.yml  requirements.md
3. `backend/: requirements.txt
4. `frontend/: Dockerfile
5. `frontend/: package.json
backend/: .env.example  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup.cfg
backend/api/: admin.py  models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/celery_app/: tasks.py
backend/core/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/data_ingestion/: __init__.py  apps.py
backend/data_ingestion/management/: __init__.py
backend/data_ingestion/management/commands/: fetch_copernicus_data.py  fetch_noaa_data.py  seed_sample_data.py
backend/data_ingestion/services/: __init__.py  cleanup_service.py  copernicus_service.py  noaa_service.py
frontend/: .env.local.example  .eslintrc.json  CLAUDE.md  README.md  next.config.js  package.json  tailwind.config.ts
frontend/src/components/: TemperatureChart.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: index.tsx
frontend/src/types/: index.ts
infra/: CLAUDE.md
infra/docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.frontend.back-up  entrypoint.sh
scripts/: quickstart.sh
